--- a/index.html
+++ b/index.html
@@ -25,7 +25,27 @@
 </head>
 <body>  
     <header>
-        <div class="wrapp-header">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light d-md-none d-sm-block">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="assets/images/logo.png" width="240" height="69" alt="logotipo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </div>
+            </div>
+          </div>
+        </nav>
+
+        <div class="wrapp-header d-lg-block d-sm-none">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom">
                     <div class="col-md-3 mb-2 mb-md-0">
@@ -54,15 +74,61 @@
         </div>
     </header>
     <main>
+
         <section class="full-slider">
-            Slider principal
+          <div class="container"></div>
         </section>
-        <section>
-            Links rápidos
+
+        <section class="links-rapidos">
+          <div class="container">
+             <div class="row">
+                <div class="col p-1">
+                  <div class="link-rapido">
+                    link 1
+                  </div>
+                </div>
+                <div class="col p-1">
+                  <div class="link-rapido">
+                    link 1
+                  </div>
+                </div>
+                <div class="col p-1">
+                  <div class="link-rapido">
+                    link 1
+                  </div>
+                </div>
+                <div class="col p-1">
+                  <div class="link-rapido">
+                    link 1
+                  </div>
+                </div>
+                <div class="col p-1">
+                  <div class="link-rapido">
+                    link 1
+                  </div>
+                </div>
+                <div class="col p-1">
+                  <div class="link-rapido">
+                    link 1
+                  </div>
+                </div>
+                <div class="col p-1">
+                  <div class="link-rapido">
+                    link 1
+                  </div>
+                </div>
+             </div>
+          </div>
         </section>
-        <section>
-            Notícias
+
+        <section class="noticias">
+          <div class="container">Notícias</div>
         </section>
+
+        <section class="eventos">
+          <div class="container">Eventos</div>
+        </section>
+
     </main>
     <footer>
         <div class="container">
@@ -75,34 +141,34 @@
               </div>
               <div class="col">
                 <div class="comon-footer">
-                  <h5> About Us </h5>
+                  <h5> Sobre nós </h5>
                   <ul>
-                    <li> <a href="#"> Our Mission &amp; Values </a> </li>
-                    <li> <a href="#"> Leadership </a> </li>
-                    <li> <a href="#"> Awards </a> </li>
-                    <li> <a href="#"> Publications &amp; Reports </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
                   </ul>
                 </div>
               </div>
               
               <div class="col">
                 <div class="comon-footer">
-                  <h5> QUICK LINKS </h5>
+                  <h5>links rápidos</h5>
                   <ul>
-                    <li> <a href="#"> Find a Doctor </a> </li>
-                    <li> <a href="#"> Book an Appointment </a> </li>
-                    <li> <a href="#"> Make an Enquiry </a> </li>
-                    <li> <a href="#"> Blogs </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
                   </ul>
                 </div>
               </div>
               <div class="col">
                 <div class="comon-footer">
-                  <h5> MEDICAL PROFESSIONALS </h5>
+                  <h5>Educação continuada</h5>
                   <ul>
-                    <li> <a href="#"> Academics </a> </li>
-                    <li> <a href="#"> Clinical Research </a> </li>
-                    <li> <a href="#"> Terms of Service </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
+                    <li> <a href="#"> Item  </a> </li>
                   </ul>
                 </div>
               </div>
@@ -112,7 +178,7 @@
         <hr class="bg-white">
         <div class="container">
             <div class="d-lg-flex justify-content-between">
-               <div class="col-lg-6 text-white"> 2021 - 2022 © Health Cu. All rights reserved. </div>
+               <div class="col-lg-6 text-white"> 2023 © Itarget. Todos os direitos reservados. </div>
                <div class="col-lg-6"> 
                      <ul class="list-unstyled socal">
                         <li> <a href="#"> <i class="bi bi-facebook"></i>  </a>
